# pet_store

./: README.md  db.sqlite3  docker-compose.dev.yml  pyproject.toml  pytest.ini
core/migrations/: 0001_initial.py
docker/dev/: Dockerfile  entrypoint.sh
pet_store/: db.sqlite3  settings.py  urls.py
pet_store/settings/: __init__.py  local.py
store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_auction_bid.py  0003_alter_auction_pet.py
store/tests/: test_auction.py  test_bid.py  test_pets.py  test_store.py
